--- a/vetcommunity-backend/vetcommunity/vetcommunity.csproj
+++ b/vetcommunity-backend/vetcommunity/vetcommunity.csproj
@@ -27,9 +27,30 @@
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
     <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <None Remove="Microsoft.EntityFrameworkCore.Design" />
+    <None Remove="Enums\" />
+    <None Remove="DTOs\" />
+    <None Remove="DTOs\Request\" />
+    <None Remove="DTOs\Response\" />
+    <None Remove="Resources\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Data\Entities\" />
+    <Folder Include="Enums\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="DTOs\Request\" />
+    <Folder Include="DTOs\Response\" />
+    <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Messages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Resources\Messages.Designer.cs">
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
