--- a/vetcommunity-backend/vetcommunity/vetcommunity.csproj
+++ b/vetcommunity-backend/vetcommunity/vetcommunity.csproj
@@ -21,6 +21,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.4" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
+    <PackageReference Include="Hangfire" Version="1.7.28" />
+    <PackageReference Include="MailKit" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -44,6 +46,8 @@
     <None Remove="System.Linq.Dynamic.Core" />
     <None Remove="Hubs\" />
     <None Remove="Services\" />
+    <None Remove="Hangfire" />
+    <None Remove="MailKit" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
