--- a/vetcommunity-web/package.json
+++ b/vetcommunity-web/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.30.0",
     "react-infinite-scroll-hook": "^4.0.3",
+    "react-otp-input": "^2.4.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
