Se agrego la funcionalidad de user

--- a/vetcommunity-web/package.json
+++ b/vetcommunity-web/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@microsoft/signalr": "^6.0.5",
-    "@mui/icons-material": "^5.5.1",
+    "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -21,9 +21,11 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.30.0",
     "react-infinite-scroll-hook": "^4.0.3",
+    "react-player": "^2.10.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.29.0",
     "redux": "^4.1.2",
     "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
